# TorchOnlyAST

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
torch_only_ast/models/: ast.py  passt.py  ssast.py
torch_only_ast/modules/: passt.py  vit.py
torch_only_ast/transforms/: ast.py  kaldi.py
torch_only_ast/utils/: __init__.py
torch_only_ast/utils/data/audioset/: ast.py
torch_only_ast/utils/github/: __init__.py
torch_only_ast/utils/hydra/: utils.py
